--- a/html/planet-js.html
+++ b/html/planet-js.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Loops</title>
+    <title>Title</title>
 </head>
 <body>
-
-<script src="js/loops.js"></script>
+<script src = "../js/planets-array.js"</script>
 
 </body>
 </html>
