--- a/html/break_and_continue.html
+++ b/html/break_and_continue.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<script src = "js/planets-strings.js"</script>
+<script src ="../js/break_and_continue.js"
+</script>
 
 </body>
 </html>
