--- a/html/functions_js.html
+++ b/html/functions_js.html
@@ -4,6 +4,6 @@
     <title>Functions</title>
 </head>
 <body>
-<script src="js/functions.js"</script>
+<script src="../js/functions.js"</script>
 </body>
 </html>
