--- a/html/loops-lec.html
+++ b/html/loops-lec.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Loops</title>
 </head>
 <body>
-<script src="js/while.js"</script>
+
+<script src="../js/loops.js"></script>
 
 </body>
 </html>
