--- a/html/math-js.html
+++ b/html/math-js.html
@@ -5,8 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src ="js/break_and_continue.js"
-</script>
+    <script src= "../js/circle.js"></script>
 
 </body>
 </html>
