--- a/html/split-join.html
+++ b/html/split-join.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="js/iterating.js"</script>
+<script src = "../js/planets-strings.js"</script>
 
 </body>
 </html>
