--- a/order-pizza.html
+++ b/order-pizza.html
@@ -49,5 +49,6 @@
         <h1 class="bg-light opacity-75 w-100">Welcome to Pizza World!</h1>
     </div>
 </div>
+        <h2>Build your own pizza!</h2>
 </body>
 </html>
