--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,9 +5,30 @@
     <title>J.QUERY/</title>
 </head>
 <body>
-
-<script src= "https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-crossorigin="anonymous"></script>"
+<div id="container">
+    <h1 id="heading">HELLO </h1>
+    <p id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eius nobis obcaecati quos repellat. Aliquid animi
+        architecto commodi cum debitis deleniti ea enim et magni maiores quaerat quibusdam, quidem suscipit.</p>
+    <ul>
+        <li class="codeup">Item 1</li>
+        <li class="codeup">Item 2</li>
+        <li id="codeup">Item 3</li>
+    </ul>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous"></script>
 <script src="js/jquery_exercises.js"></script>
+<script>
+  //$("#heading")
+  //alert(jQuery("#content").html())
+
+  //$(".codeup").css("border", "1px solid red")
+
+  $("li").css("font-size", "20px")
+  $("h1, p, li").css("background", "lime");
+
+  alert($("h1").html());
+</script>
 </body>
 </html>
