--- a/weather_map.html
+++ b/weather_map.html
@@ -1,146 +1,238 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Weather App</title>-->
-<!--    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />-->
-
-<!--    <style>-->
-
-<!--    </style>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--<div id="map"></div>-->
-
-<!--<script src="https://code.jquery.com/jquery-2.2.4.min.js"-->
-<!--        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>-->
-
-<!--<script src="js/keys.js"></script>-->
-
-<!--<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>-->
-
-<!--<script>-->
-<!--    "use strict";-->
-
-<!--    mapboxgl.accessToken = MAPBOX_TOKEN;-->
-
-
-<!--    $.get('https://api.openweathermap.org/data/2.5/forecast', {-->
-<!--        appid: WEATHERMAP_TOKEN,-->
-<!--        lat: 29.4252,-->
-<!--        lon: -98.4916,-->
-<!--        units: 'imperial'-->
-<!--    }).done(function (data) {-->
-<!--        console.log(data);-->
-
-<!--        // console.log(days);-->
-
-<!--        // dealing with time-->
-<!--        // convert API date/time response to JS Date Object-->
-<!--        // ... new Date(1629461117 * 1000)-->
-<!--        // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date-->
-<!--    }).fail(function (error) {-->
-<!--        console.log(error);-->
-<!--    });-->
-
-<!--</script>-->
-
-<!--</body>-->
-<!--</html>-->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Weather Map Project</title>
     <!-- Mapbox CSS -->
-   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet'/>
-    <!-- Bootstrap-->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- 5 Day Forcast -->
     <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.1/mapbox-gl-geocoder.min.js'></script>
     <!-- Search Bar On Map-->
-   <link rel='stylesheet'
-              href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.1/mapbox-gl-geocoder.css'
-              type='text/css'/>
+    <link rel='stylesheet'
+          href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.1/mapbox-gl-geocoder.css'
+          type='text/css'/>
     <!--GOOGLE FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=IM+Fell+English&display=swap"
-              rel="stylesheet">
+<!--    <link rel="preconnect" href="https://fonts.googleapis.com">-->
+<!--    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+<!--    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=IM+Fell+English&display=swap"-->
+<!--          rel="stylesheet">-->
     <style>
-    .card {
-        margin: 9px;
+        .card {
+            margin: 9px;
         }
 
-    #map {
-        /* the width and height may be set to any size */
-        width: 100%;
-        height: 400px;
-        position: fixed;
-        bottom: 0;
-        margin: 0;
+        #map {
+            /* the width and height may be set to any size */
+            width: 100%;
+            height: 400px;
+            position: fixed;
+            bottom: 0;
+            margin: 0;
         }
 
-    h1 {
-        background-color: #0c6efd;
-        color: white;
-        width: 100%;
+        h1 {
+            background-color: blueviolet;
+            color: white;
+            width: 100%;
         }
 
-    div > .card {
-        height: 275px;
+        div > .card {
+            height: 275px;
         }
     </style>
 </head>
 <body>
+<!-- NavBar  -->
+<nav class="navbar navbar-light bg-light justify-content-between">
+    <a class="navbar-brand">Weather App/Five Day Forecast</a>
+    <form class="form-inline">
+        <input id="userInput" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button id='btn' class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
+    </form>
+</nav>
+
+<section class="ajax-section">
+    <div class="container">
+        <ul class="cities"></ul>
+
+    </div>
+</section>
+
+
+
+<!-- Map Existence -->
+<div id='map'></div>
+<!-- Cards for 5-day weather forecast -->
+<div class="page-content page-container" id="page-content">
+    <div class="padding">
+        <div class="row container d-flex justify-content-center">
+            <div class="col-lg-8 grid-margin stretch-card">
+                <!--weather card-->
+                <div class="card card-weather">
+                    <div class="card-body">
+                        <div class="weather-date-location">
+                            <h3>Friday</h3>
+                            <p class="text-gray">
+                                <span class="weather-date">25 March, 2019</span>
+                                <span class="weather-location">Sydney, Australia</span>
+                            </p>
+                        </div>
+                        <div class="weather-data d-flex">
+                            <div class="mr-auto">
+                                <h4 class="display-3">32
+                                    <span class="symbol">&deg;</span>C</h4>
+                                <p>
+                                    Cloudy
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body p-0">
+                        <div class="d-flex weakly-weather">
+                            <div class="weakly-weather-item">
+                                <p class="mb-0">
+                                    Sun
+                                </p>
+                                <i class="mdi mdi-weather-cloudy"></i>
+                                <p class="mb-0">
+                                    30&deg;
+                                </p>
+                            </div>
+                            <div class="weakly-weather-item">
+                                <p class="mb-1">
+                                    Mon
+                                </p>
+                                <i class="mdi mdi-weather-hail"></i>
+                                <p class="mb-0">
+                                    31&deg;
+                                </p>
+                            </div>
+                            <div class="weakly-weather-item">
+                                <p class="mb-1">
+                                    Tue
+                                </p>
+                                <i class="mdi mdi-weather-partlycloudy"></i>
+                                <p class="mb-0">
+                                    28&deg;
+                                </p>
+                            </div>
+                            <div class="weakly-weather-item">
+                                <p class="mb-1">
+                                    Wed
+                                </p>
+                                <i class="mdi mdi-weather-pouring"></i>
+                                <p class="mb-0">
+                                    30&deg;
+                                </p>
+                            </div>
+                            <div class="weakly-weather-item">
+                                <p class="mb-1">
+                                    Thu
+                                </p>
+                                <i class="mdi mdi-weather-pouring"></i>
+                                <p class="mb-0">
+                                    29&deg;
+                                </p>
+                            </div>
+                            <div class="weakly-weather-item">
+                                <p class="mb-1">
+                                    Fri
+                                </p>
+                                <i class="mdi mdi-weather-snowy-rainy"></i>
+                                <p class="mb-0">
+                                    31&deg;
+                                </p>
+                            </div>
+                            <div class="weakly-weather-item">
+                                <p class="mb-1">
+                                    Sat
+                                </p>
+                                <i class="mdi mdi-weather-snowy"></i>
+                                <p class="mb-0">
+                                    32&deg;
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--weather card ends-->
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<!--<div class="d-flex w-75" id="container">-->
+<!--    <div class="col-lg-3 card" style="width: 18rem;">-->
+<!--        <img class="card-img-top" src="..." alt="Card image cap">-->
+<!--        <div class="card-body">-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 card" style="width: 18rem;">-->
+<!--        <img class="card-img-top" src="..." alt="Card image cap">-->
+<!--        <div class="card-body">-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 card" style="width: 18rem;">-->
+<!--        <img class="card-img-top" src="..." alt="Card image cap">-->
+<!--        <div class="card-body">-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 card" style="width: 18rem;">-->
+<!--        <img class="card-img-top" src="..." alt="Card image cap">-->
+<!--        <div class="card-body">-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-lg-3 card" style="width: 18rem;">-->
+<!--        <img class="card-img-top" src="..." alt="Card image cap">-->
+<!--        <div class="card-body">-->
+
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!-- Keys -->
+<script src="../js/keys.js"></script>
+<!-- Geocoder -->
+<script src="../js/mapbox-geocoder-utils.js"></script>
+<!-- JS -->
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <script>
     "use strict";
 
     mapboxgl.accessToken = MAPBOX_TOKEN;
 
-    let map = new mapboxgl.Map({
+    var map = new mapboxgl.Map({
         container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v9',
+        style: 'mapbox://styles/mapbox/dark-v10',
         zoom: 10,
         center: [-96.7970, 32.7767]
     });
 
-    // $.get('https://api.openweathermap.org/data/2.5/forecast', {
-    //     appid: WEATHERMAP_TOKEN,
-    //     lat: 29.4252,
-    //     lon: -98.4916,
-    //     units: 'imperial'
-    // }).done(function(data) {
-    //     console.log(data);
+    $('#btn').on('click', function () {
+        // let geocoder = new MapboxGeocoder({
+        //     accessToken: mapboxgl.accessToken,
+        //     mapboxgl: mapboxgl
+        // })
+        let userInput = $("#userInput").val();
+        geocode(userInput, MAPBOX_TOKEN).then(function(result) {
+            console.log(result);
+            map.setCenter(result);
+            map.setZoom(10);
+        });
 
-        // console.log(days);
-
-        // dealing with time
-        // convert API date/time response to JS Date Object
-        // ... new Date(1629461117 * 1000)
-        // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date
-    // }).fail(function(error) {
-    //     console.log(error);
-    // });
+    });
 
 </script>
-
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<!-- Mapbox JS -->
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
-<!-- Custom JS -->
-<script src="https://code.jquery.com/jquery-3.6.1.min.js"
-        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-<!-- Mapbox Geocoder -->
-<script src="../js/mapbox-geocoder-utils.js"></script>
-<!-- Key Script Source -->
-<script src="../js/keys.js"></script>
-<!-- Navbar -->
 </body>
+</html>
